Removed Some Sonar Issues